# issue-orchestrator

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  LICENSE  MILESTONES.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/scripts/: oxc-fix.mjs
.github/workflows/: ci.yml
docs/screenshots/: README.md
src/: app.tsx  main.ts  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py  icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  paths.rs  pty.rs  spawn.rs
src-tauri/src/config/: actor.rs  mod.rs
src-tauri/src/enrichment/: mod.rs  tests.rs
src-tauri/src/hooks/: hook.sh.template  log.rs  mod.rs  script.rs  tests.rs
src-tauri/src/ipc/: events.rs  git.rs  issues.rs  mod.rs  pty.rs  repos.rs  secrets.rs  setup.rs
src-tauri/src/issues/: factory.rs  github.rs  jira.rs  linear.rs  mod.rs  secrets.rs  tests.rs
src-tauri/src/registry/: builder.rs  mod.rs  session.rs  status.rs  tests.rs
src-tauri/src/spawn/: git.rs  headless.rs  mod.rs  tests.rs
src/components/: ActivityIcon.tsx  AddRepoButton.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffView.tsx  EmptyState.tsx  IssuePicker.tsx  Kbd.tsx  Modal.tsx  NewClaudeButton.tsx  PrChip.tsx  RepoDrawer.tsx  RightPane.tsx  SettingsPanel.tsx  SetupPanel.tsx  Sidebar.tsx  SidebarRow.tsx  StatusBar.tsx  StatusDot.tsx  Tab.tsx  TabStrip.tsx  TerminalArea.tsx  TerminalView.tsx
src/lib/: clipboard.ts  constants.ts  spawn-bash.ts  spawn-claude.ts  spawn-prompt.ts  tokens.css  use-focus-trap.ts
src/state/: context-menu.ts  keymap.ts  notifications.ts  palette.ts  picker.ts  pty-stream.ts  repos.ts  (+5 more)
(+44 files in other folders)
